autostart + human delay

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -26,6 +26,10 @@
     "autoStart": {
       "on": "Auto start on",
       "off": "Auto start off"
+    },
+    "humanDelay": {
+      "on": "Human delay on",
+      "off": "Human delay off"
     }
   },
   "modal": {
